--- a/app/views/shared/_aboutme.html.erb
+++ b/app/views/shared/_aboutme.html.erb
@@ -5,8 +5,8 @@
       <div class="collapsible-body">
       <!--  I FEEL BLESSED -->
       
-        <p><center>Now Playing:</center><center><iframe width="560" height="315" src="https://www.youtube.com/embed/M6t47RI4bns?rel=0&amp;controls=1&amp;showinfo=0&amp;autoplay=0&amp;start=171&amp;iv_load_policy=3&amp;" frameborder="0" allowfullscreen></iframe></center></p>
-
+<!--         <p><center>Now Playing:</center><center><iframe width="560" height="315" src="https://www.youtube.com/embed/M6t47RI4bns?rel=0&amp;controls=1&amp;showinfo=0&amp;autoplay=0&amp;start=171&amp;iv_load_policy=3&amp;" frameborder="0" allowfullscreen></iframe></center></p>
+ -->
       <!--  I FEEL BLESSED -->
 
       	<p align-text="left">
