--- a/app/views/shared/_projects.html.erb
+++ b/app/views/shared/_projects.html.erb
@@ -1,9 +1,9 @@
-<h5 class="center black-text" id = "projects">Professional Projects I've Worked On</h2>
+<h5 class="center black-text" id = "projects">Professional Projects I've Worked On</h5>
 
  <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center black-text"><img src="mdm-logo.png" class="mdm-logo"></h2>
+            <center><img src="mdm-logo.png" class="mdm-logo"></center>
             <h5 class="center">Mobile Manager</h5> 
         
         <!-- Modal Trigger -->
@@ -29,7 +29,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center black-text"><img src="rocket-logo.png" class="rocket-logo"></h2>
+            <center><img src="rocket-logo.png" class="rocket-logo"><c/enter>
             <h5 class="center">Rocket Webfilter</h5>
 
         <!-- Modal Trigger -->
@@ -56,7 +56,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center black-text"><img src="mybigcampus.png" class="mybigcampus-logo"></h2>
+           <center> <img src="mybigcampus.png" class="mybigcampus-logo"> </center>
             <h5 class="center">My Big Campus</h5>
 
         <!-- Modal Trigger -->
