--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,7 +52,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="http://i.imgur.com/KaYOCwq.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
 
@@ -74,7 +74,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="http://i.imgur.com/I7Mi4wd.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
   <div class="container">
@@ -93,7 +93,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="http://i.imgur.com/I7Mi4wd.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 3"></div>
   </div>
 
   
