--- a/app/views/shared/_projects.html.erb
+++ b/app/views/shared/_projects.html.erb
@@ -14,9 +14,9 @@
           <div class="modal-content">
             <h4></h4>
             <p>
-<!--               <div class="video-container">
+              <div class="video-container">
             <p><center><iframe width="560" height="315" src="https://www.youtube.com/embed/TlBB3RM9O3A?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;iv_load_policy=3&amp;vq=hd720" frameborder="0" allowfullscreen></iframe></center></p>
-              </div> -->
+              </div>
 
             </p>
           </div>
@@ -40,9 +40,9 @@
           <div class="modal-content">
             <h4></h4>
             <p>
-<!--               <div class="video-container">
+              <div class="video-container">
             <p><center><iframe width="560" height="315" src="https://www.youtube.com/embed/tp9vlsP4J2U?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;iv_load_policy=3&amp;vq=hd720" frameborder="0" allowfullscreen></iframe></center></p>
-          </div> -->
+          </div>
             </p>
           </div>
           <div class="modal-footer">
@@ -67,9 +67,9 @@
           <div class="modal-content">
             <h4></h4>
             <p>
-<!--               <div class="video-container">
+              <div class="video-container">
             <p><center><iframe width="560" height="315" src="https://www.youtube.com/embed/0_2zgrATWAM?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;iv_load_policy=3&amp;vq=hd720" frameborder="0" allowfullscreen></iframe></center></p>
-          </div> -->
+          </div>
             </p>
           </div>
           <div class="modal-footer">
