--- a/app/views/shared/_aboutme.html.erb
+++ b/app/views/shared/_aboutme.html.erb
@@ -5,7 +5,9 @@
       <div class="collapsible-body">
       <!--  I FEEL BLESSED -->
       
-        <p><center>Now Playing:</center><center><iframe width="560" height="315" src="https://www.youtube.com/embed/xWbdXHnx7w8?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;start=72&amp;iv_load_policy=3&amp;" frameborder="0" allowfullscreen></iframe></center></p>
+        <p><center>Now Playing:</center><br><center>
+
+          <iframe width="660" height="315" src="https://www.youtube.com/embed/xWbdXHnx7w8?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;start=72&amp;iv_load_policy=3&amp;" frameborder="0" allowfullscreen></iframe></center></p>
 
       <!--  I FEEL BLESSED -->
 
