shaddows and text updates

--- a/app/views/shared/_education.html.erb
+++ b/app/views/shared/_education.html.erb
@@ -9,11 +9,12 @@
 
 
 <p align="left">
-
-   TeamTreeHouse
+	Developer Meetups
+  <br> Personal Projects
+  <br> TeamTreeHouse
   <br> CodeSchool
   <br> Michael Hartl's Rails Tutorial
-  <br> Personal Projects
+
 </p>
 
 
