--- a/app/views/shared/_experience.html.erb
+++ b/app/views/shared/_experience.html.erb
@@ -21,7 +21,7 @@ As a Senior member of the SaaS QA department, my primary responsibilities were h
 <p class="title-date"> <span style="float:left"> <strong>Webfilter QA Engineer </strong></span><span style="float:right"> <strong>June 2013 - Feb 2014</strong> </span> <br></p>
 
 <p id ="high" align="left">
-During my accelerated workload on the Webfilter team, tools included: Salesforce, Gemini, and Unix based environments. Working primarily on ticket escalations via Salesforce, my responsibilities were acting as Tier III to find and resolve issues that were believed to be caused by defects in the product. Scope also included blackbox testing, clearbox testing, and mentorship to the Support department.
+During my accelerated workload on the Webfilter team, tools included: Salesforce, Gemini, and Unix based environments. Working primarily on ticket escalations via Salesforce, my responsibilities included acting as Tier III to find and resolve issues that were believed to be caused by defects in the product. Scope also included blackbox testing, clearbox testing, and mentorship to the Support department.
 
 </p>
 
