--- a/app/views/shared/_aboutme.html.erb
+++ b/app/views/shared/_aboutme.html.erb
@@ -7,7 +7,12 @@
       
         <p><center>Now Playing:</center><br><center>
 
-          <iframe class="z-depth-3" width="660" height="315" src="https://www.youtube.com/embed/xWbdXHnx7w8?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;start=72&amp;iv_load_policy=3&amp;" frameborder="0" allowfullscreen></iframe></center></p>
+<video class="responsive-video" width="853" height="480" controls>
+    <source src="video.mp4" type="video/mp4">
+</video>
+
+
+<!--           <iframe class="z-depth-3" width="660" height="315" src="https://www.youtube.com/embed/xWbdXHnx7w8?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;start=72&amp;iv_load_policy=3&amp;" frameborder="0" allowfullscreen></iframe></center></p> -->
 
       <!--  I FEEL BLESSED -->
 
