--- a/app/views/shared/_aboutme.html.erb
+++ b/app/views/shared/_aboutme.html.erb
@@ -5,7 +5,7 @@
       <div class="collapsible-body">
       <!--  I FEEL BLESSED -->
       
-        <p><center>Now Playing:</center><br><center>
+        <p><center>Now Playing:</center><br>
 
 <video class="responsive-video" width="853" height="480" controls>
     <source src="video.mp4" type="video/mp4">
