--- a/app/views/shared/_aboutme.html.erb
+++ b/app/views/shared/_aboutme.html.erb
@@ -7,7 +7,7 @@
       
         <p><center>Now Playing:</center><br><center>
 
-          <iframe class="z-depth-3" width="660" height="315" src="https://www.youtube.com/embed/xWbdXHnx7w8?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;start=72&amp;iv_load_policy=3&amp;" frameborder="0" allowfullscreen></iframe></center></p>
+          <iframe class="z-depth-3" width="560" height="285" src="https://www.youtube.com/embed/xWbdXHnx7w8?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;start=72&amp;iv_load_policy=3&amp;" frameborder="0" allowfullscreen></iframe></center></p>
 
       <!--  I FEEL BLESSED -->
 
@@ -17,7 +17,20 @@
         <br>
       	I decided to use some free time to build out the website you are looking at now.  It's using <b>Materialize</b> on the front-end, <b>Ruby on Rails</b> on the back-end, and <b>Heroku</b> for hosting. I wanted a website that was sleek and simple so I went with something pretty design heavy. It includes all important information about me while showing off a few skills in web development.  I also included a link to my Resume in a professional PDF format. Let me know if you need anything else. Thanks!
          </p>
+         <blockquote>
 
+          <b>Site To Do:</b><br>
+          Fix <a href="http://i.imgur.com/7IaCWt5.png" target="_blank" style="color:teal"> Mobile View </a> of Parallax(s) and Profile Photo <br>
+          Move from Heroku to Digital Ocean <br>
+          Create Capistrano script to deploy to Digital Ocean <br>
+          Covert from Ruby on Rails to Sinatra for improved performace <br>
+          Add Personal Entreprenurial Projects Section<br>
+          Convert Youtube to self hosted with  <a href="http://www.videojs.com/" style="color:teal">VideoJS.</a> <br>
+          Add Visitor Tracking with <a href="https://ankane.github.io/ahoy/" style="color:teal"> Ahoy. </a> <br>
+          Possibly move from from Materialize to <a href="http://semantic-ui.com/" style="color: teal"> Semantic-Ui.</a>
+        </blockquote>
+          <center><u>Last Updated    6.18.15</u><br></center>
+         
       </div>
     </li>
 
