--- a/app/views/shared/_aboutme.html.erb
+++ b/app/views/shared/_aboutme.html.erb
@@ -26,7 +26,7 @@
           Covert from Ruby on Rails to Sinatra for improved performace <br>
           Add Personal Entreprenurial Projects Section<br>
           Convert Youtube to self hosted with  <a href="http://www.videojs.com/" style="color:teal">VideoJS.</a> <br>
-          Add Visitor Tracking with <a href="https://ankane.github.io/ahoy/" style="color:teal"> Ahoy </a> or <a href ="https://coderwall.com/p/qbgnjg/track-page-views-the-smart-way-with-the-impressionist-gem" style="color:teal"> Impressionist.<br>
+          Add Visitor Tracking with <a href="https://ankane.github.io/ahoy/" style="color:teal"> Ahoy </a> or <a href ="https://coderwall.com/p/qbgnjg/track-page-views-the-smart-way-with-the-impressionist-gem" style="color:teal"> Impressionist.</a><br>
           Possibly move from from Materialize to <a href="http://semantic-ui.com/" style="color: teal"> Semantic-Ui.</a>
         </blockquote>
           <center><u>Last Updated    6.18.15</u><br></center>
