--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,7 +34,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center white-text text-lighten-2">Ricardo Fernandez</h1>
+        <h2 class="header center white-text text-lighten-2">R. Fernandez</h2>
         <div class="row center">
                    <img src="rick.jpg" alt="photograph of Rick!" class="profile-photo">
 
