--- a/app/views/shared/_experience.html.erb
+++ b/app/views/shared/_experience.html.erb
@@ -13,7 +13,7 @@
 </p>
 
 <p id ="high" align="left">
-As a Senior member of the SaaS QA department, my primary responsibilities were handling releases, defect tracking, release documentation, and acting as liaison between Support/Development. Releases were done by utilizing a <u>Capistrano</u> script to deploy to staging  and using a proprietary deployment tool to release to production. Regression was fufilled by test plans devised of integration, unit, and functional tests.   Later in my position, I was given the opportunity to oversee all iOS and Android development for the My Big Campus solution. It was also in this position where my experience was used to mentor junior members.
+As a Senior member of the SaaS QA department, my primary responsibilities were handling releases, defect tracking, release documentation, and acting liaison between Support/Development. Releases were done by utilizing a <u>Capistrano</u> script to deploy to staging  and using a proprietary deployment tool to release to production. Regression was fufilled by test plans devised of integration, unit, and functional tests.   Later in my position, I was given the opportunity to oversee all iOS and Android development for the My Big Campus solution. It was also in this position where my experience was used to mentor junior members.
 
 </p>
 
