--- a/app/views/shared/_skills.html.erb
+++ b/app/views/shared/_skills.html.erb
@@ -21,7 +21,7 @@
             <h5 class="center">Frameworks</h5>
 
             <ul class="center light">
-              <li><strong>Ruby on Rails</lu>
+              <li><strong>Rails</lu>
               <li>Sinatra</li>
               <li>Bootstrap</li>
               <li>Materialize</li>
