remove vid padding

--- a/app/views/shared/_aboutme.html.erb
+++ b/app/views/shared/_aboutme.html.erb
@@ -14,7 +14,7 @@
       </p>
         <center>Now Playing:</center>
         <center>
-          <iframe class="z-depth-2" style="padding-top: 10px" width="560" height="285" src="https://www.youtube.com/embed/xWbdXHnx7w8?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;start=72&amp;iv_load_policy=3&amp;" frameborder="0" allowfullscreen></iframe></center>
+          <iframe class="z-depth-2" width="560" height="285" src="https://www.youtube.com/embed/xWbdXHnx7w8?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;start=72&amp;iv_load_policy=3&amp;" frameborder="0" allowfullscreen></iframe></center>
 
 
 
