fix parallax mobile view

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,7 +52,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 2" style="height:900px"></div>
   </div>
 
 
@@ -74,7 +74,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 2" style="height:1500px"></div>
   </div>
 
   <div class="container">
@@ -93,7 +93,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 3" style="align:right; height:1000px"></div>
   </div>
 
   
