--- a/app/views/shared/_education.html.erb
+++ b/app/views/shared/_education.html.erb
@@ -8,7 +8,7 @@
 
 
 
-<p align="left">
+<p id ="high" align="left">
 	Developer Meetups
   <br> Personal Projects
   <br> TeamTreeHouse
@@ -26,7 +26,7 @@
 
 
 
-<p align="left">
+<p id ="high" align="left">
 RailsConf - San Diego<br>
 Lightspeed Connect - Austin
 </p>
@@ -40,7 +40,7 @@ Lightspeed Connect - Austin
 
 
 
-<p align="left">
+<p id ="high" align="left">
 B.S. Networking Science and Communication<br>
 Management Courses <br>
 4.0 GPA
@@ -51,7 +51,7 @@ Management Courses <br>
 <span style="float:left"> <strong>Regional Occupational Center</strong> </span> <span style="float:right"> 2008 - 2010 </span>  <br> 
 </p>
 
-<p align="left">
+<p id ="high" align="left">
 A+ Certification <br>
 Internships
 </p>
@@ -61,6 +61,6 @@ Internships
 <span style="float:left"> <strong>Golden Valley High School</strong> </span> <span style="float:right"> 2006 - 2010 </span>  <br> 
 </p>
 
-<p align="left">
+<p id ="high" align="left">
 4.0 GPA
 </p>
