--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,7 +30,7 @@
     </div>
   </nav>
 
-  <div id="index-banner" class="parallax-container">
+  <div id="index-banner" class="parallax-container" style="background-color: rgba(0, 0, 0, .2)">
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
@@ -64,7 +64,7 @@
   </div>
 
 
-  <div class="parallax-container valign-wrapper">
+  <div class="parallax-container valign-wrapper" style="background-color: rgba(0, 0, 0, .2)">
 
 
     <div class="section no-pad-bot">
@@ -84,7 +84,7 @@
   </div>
 
 
-  <div class="parallax-container valign-wrapper">
+  <div class="parallax-container valign-wrapper" style="background-color: rgba(0, 0, 0, .2)">
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
