--- a/app/views/shared/_projects.html.erb
+++ b/app/views/shared/_projects.html.erb
@@ -29,7 +29,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <center><img src="rocket-logo.png" class="rocket-logo"><c/enter>
+            <center><img src="rocket-logo.png" class="rocket-logo"></center>
             <h5 class="center">Rocket Webfilter</h5>
 
         <!-- Modal Trigger -->
