--- a/app/views/shared/_aboutme.html.erb
+++ b/app/views/shared/_aboutme.html.erb
@@ -1,16 +1,11 @@
 
   <ul class="collapsible popout" style="padding-top: 10px" data-collapsible="accordion">
     <li>
-      <div class="collapsible-header"><center>Press Here To Read About Me</center></div>
+      <div class="collapsible-header active"><center>Press Here To Read About Me</center></div>
       <div class="collapsible-body">
-      <!--  I FEEL BLESSED -->
-      
-
-      <!--  I FEEL BLESSED -->
-
       	<p align-text="left">
       	Hey There! My name is Rick and I am currently a Free Agent in the Software Development field.
-
+<!-- 
       </p>
         <center>Now Playing:</center>
         <center>
@@ -19,23 +14,13 @@
 
 
 
-      <p>
+        <p> -->
         <br>
       	I decided to use some free time to build out the website you are looking at now.  It's using <b>Materialize</b> on the front-end, <b>Ruby on Rails</b> on the back-end, and <b>Heroku</b> for hosting. I wanted a website that was sleek and simple so I went with something pretty design heavy. It includes all important information about me while showing off a few skills in web development.  I also included a link to my Resume in a professional PDF format. Let me know if you need anything else. Thanks!
          </p>
-         <blockquote>
 
-          <b>Site To Do:</b><br>
-          Fix <a href="http://i.imgur.com/7IaCWt5.png" target="_blank" style="color:teal"> Mobile View </a> of Parallax(s) and Profile Photo <br>
-          Move from Heroku to Digital Ocean <br>
-          Create Capistrano script to deploy to Digital Ocean <br>
-          Covert from Rails to Sinatra for improved performace <br>
-          Add Personal Entreprenurial Projects Section<br>
-          Convert Youtube to self hosted with  <a href="http://www.videojs.com/" style="color:teal">VideoJS.</a> <br>
-          Add Visitor Tracking with <a href="https://ankane.github.io/ahoy/" style="color:teal"> Ahoy </a> or <a href ="https://coderwall.com/p/qbgnjg/track-page-views-the-smart-way-with-the-impressionist-gem" style="color:teal"> Impressionist.</a><br>
-          Possibly move from from Materialize to <a href="http://semantic-ui.com/" style="color: teal"> Semantic-Ui.</a>
-        </blockquote>
-          <center><u>Last Updated    6.18.15</u><br></center>
+         <%=render "shared/todo"%>
+
          
       </div>
     </li>
