--- a/app/views/shared/_aboutme.html.erb
+++ b/app/views/shared/_aboutme.html.erb
@@ -1,7 +1,7 @@
 
   <ul class="collapsible popout" style="padding-top: 10px" data-collapsible="accordion">
     <li>
-      <div class="collapsible-header active"><center>Press Here To Read About Me</center></div>
+      <div class="collapsible-header"><center>Press Here To Read About Me</center></div>
       <div class="collapsible-body">
       	<p align-text="left">
       	Hey There! My name is Rick and I am currently a Free Agent in the Software Development field.
