--- a/app/views/shared/_experience.html.erb
+++ b/app/views/shared/_experience.html.erb
@@ -40,7 +40,7 @@ Working in Support consisted of monitoring a real-time queue of tickets and resp
 
 
 
-<p class="title-date">  <span style="float:left">  <strong>Wireless Customer Care Assistant </strong> </span> <span style="float:right"> <strong>Feb 2011 – Sept 2011</strong> </span> <br> </p>
+<p class="title-date">  <span style="float:left">  <strong>Wireless Customer Care </strong> </span> <span style="float:right"> <strong>Feb 2011 – Sept 2011</strong> </span> <br> </p>
     <!-- ACS Experience -->
 <!-- <p align="left">
 I can honestly say  the experiences while on the phones in a call center were invaluable. Whilst taking back-to-back inbound calls all day, you speak to a large spectrum of personalities. In doing so, you obtain experience to speak confidently and properly handle situations that may go awry. 
