--- a/app/views/shared/_projects.html.erb
+++ b/app/views/shared/_projects.html.erb
@@ -1,7 +1,7 @@
 <h5 class="center black-text" id = "projects">Professional Projects I've Worked On</h5>
 
  <div class="row">
-        <div class="col s12 m4">
+        <div class="col s12 m4" style="padding-bottom:10px">
           <div class="icon-block">
             <center><img src="mdm-logo.png" class="mdm-logo"></center>
             <h5 class="center">Mobile Manager</h5> 
