--- a/app/views/shared/_education.html.erb
+++ b/app/views/shared/_education.html.erb
@@ -3,7 +3,7 @@
 <p><br> &nbsp;</p>
  <!-- SELF STUDY -->
 <p class="title-date">
-<span style="float:left"> <strong>Self Study | Ruby, Ruby on Rails, HTML, CSS, Javascript</strong> </span> <span style="float:right"> Present </span>  <br> 
+<span style="float:left"> <strong>Self Study </strong> </span> <span style="float:right"> Present </span>  <br> 
 </p>
 
 
