--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,8 +40,8 @@
 
            <p class="title-date">
 
-              <i class="mdi-communication-phone prefix"> <a href="tel:6613167626">661 - 316 - 7626 </a>   </i>
-              <i class="mdi-content-mail "> <a href="mailto:Fernandezr16@gmail.com"> Contact@rickthedeveloper.com</a></i>
+               <a href="tel:6613167626"><i class="mdi-communication-phone prefix"> 661 - 316 - 7626</i><br></a>
+              <a href="mailto:Fernandezr16@gmail.com"><i class="mdi-content-mail"> contact@rickthe.website</i></a>
             </p>
 <!--           <p align="left">Hey Guys. I decided to build this website out as a cool way to showcase what I've done professionally so far. Go ahead and take a look around. I'll be updating regulary. :)</p>
  -->
