--- a/app/views/shared/_experience.html.erb
+++ b/app/views/shared/_experience.html.erb
@@ -28,7 +28,7 @@ During my accelerated workload on the Webfilter team, tools included: Salesforce
 <p class="title-date"><span style="float:left"> <strong>Support Engineer </strong> </span> <span style="float:right"> <strong><strong>Sept 2011 - June 2013</strong></strong> </span> <br> <p>
 
 <p id ="high" align="left">
-Working in Support consisted of monitoring a real-time queue of tickets and responding via outbound calls to customers. After an issue was solved, a ticket was taken and closed in your name. During my time in Support, I repeatedly obtained the highest number of taken and closed with a total of 2,500+ per year. Scope included advanced network troubleshooting, client based troubleshooting, and hardware configuration. 
+Working in Support consisted of monitoring a realtime queue of tickets and responding via outbound calls to customers. After an issue was solved, a ticket was taken and closed in your name. During my time in Support, I repeatedly obtained the highest number of taken and closed with a total of 2,500+ per year. Scope included advanced network troubleshooting, client based troubleshooting, and hardware configuration. 
 
 </p>
 
