--- a/app/views/shared/_aboutme.html.erb
+++ b/app/views/shared/_aboutme.html.erb
@@ -4,13 +4,11 @@
       <div class="collapsible-header "><center>Press Here To Read About Me</center></div>
       <div class="collapsible-body ">
       	<p align-text="left">
-      	Hey There! My name is Rick and I am currently a Free Agent in the Software Development field.
-
       </p>
         <center>Now Playing:</center>
         
         <center>
-          <iframe class="z-depth-2" width="260" height="135" src="https://www.youtube.com/embed/xWbdXHnx7w8?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;start=72&amp;iv_load_policy=3&amp;" frameborder="0" allowfullscreen></iframe></center>
+          <iframe class="z-depth-2" width="260" height="135" src="https://www.youtube.com/embed/xWbdXHnx7w8?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;start=72&amp;iv_load_policy=3&amp;vq=hd720" frameborder="0" allowfullscreen="true"></iframe></center>
 
 
 
