--- a/app/views/shared/_todo.html.erb
+++ b/app/views/shared/_todo.html.erb
@@ -4,10 +4,11 @@
           <strike>Fix <a href="http://i.imgur.com/7IaCWt5.png" target="_blank" style="color:teal"> Mobile View </a> of Parallax(s) and Profile Photo.</strike>&nbsp;Fixed: 6-19-15. Thanks <a href="http://twitter.com/dponrails" style="color:teal">David!</a><br>
           Move from Heroku to Digital Ocean <br>
           Create Capistrano script to deploy to Digital Ocean <br>
-          Covert from Rails to Sinatra for improved performace <br>
+          Covert from Ruby on Railse to Express with Node.js <br>
           Add Personal Entreprenurial Projects Section<br>
           Convert Youtube to self hosted with  <a href="http://www.videojs.com/" style="color:teal">VideoJS.</a> <br>
           Add Visitor Tracking with <a href="https://ankane.github.io/ahoy/" style="color:teal"> Ahoy </a> or <a href ="https://coderwall.com/p/qbgnjg/track-page-views-the-smart-way-with-the-impressionist-gem" style="color:teal"> Impressionist.</a><br>
-          Possibly move from from Materialize to <a href="http://semantic-ui.com/" style="color: teal"> Semantic-Ui.</a>
+          Possibly move from from Materialize to <a href="http://semantic-ui.com/" style="color: teal"> Semantic-Ui.</a> <br>
+          Covert this About me collapsible to a Pop out Module with fixed content.
         </blockquote>
           <center><u>Last Updated    6.19.15</u><br></center>
