--- a/app/views/shared/_aboutme.html.erb
+++ b/app/views/shared/_aboutme.html.erb
@@ -1,4 +1,4 @@
-
+<!-- 
   <ul class="collapsible popout" style="padding-top: 10px" data-collapsible="accordion">
     <li>
       <div class="collapsible-header "><center>Press Here To Read About Me</center></div>
@@ -24,4 +24,37 @@
       </div>
     </li>
 
-  </ul>
+  </ul> -->
+
+
+
+  <!-- Modal Trigger -->
+  <div style="padding-top: 10px"><center><a class="modal-trigger waves-effect waves-light btn" href="#modal5">Press Here To Read About Me</a></center></div>
+
+  <!-- Modal Structure -->
+  <div id="modal5" class="modal modal-fixed-footer">
+    <div class="modal-content">
+        
+      <p>Hey there! Thanks for visiting my portfolio.</p>
+        <center>Now Playing:</center>
+        
+        <center>
+          <iframe class="z-depth-2" width="260" height="135" src="https://www.youtube.com/embed/xWbdXHnx7w8?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;start=72&amp;iv_load_policy=3&amp;vq=hd720" frameborder="0" allowfullscreen="true"></iframe></center>
+
+
+
+
+        <p>
+        <br>
+        I decided to use some free time to build out the website you are looking at now.  It's using <b>Materialize</b> on the front-end, <b>Ruby on Rails</b> on the back-end, and <b>Heroku</b> for hosting. I wanted a website that was sleek and simple so I went with something pretty design heavy. It includes all important information about me while showing off a few skills in web development.  I also included a link to my Resume in a professional PDF format. Let me know if you need anything else. Thanks!
+         </p>
+
+         <%=render "shared/todo"%>
+
+          
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Thank you!</a>
+    </div>
+  </div>
+         
