--- a/app/views/shared/_aboutme.html.erb
+++ b/app/views/shared/_aboutme.html.erb
@@ -35,17 +35,20 @@
   <div id="modal5" class="modal modal-fixed-footer">
     <div class="modal-content">
         
-      <p>Hey there! Thanks for visiting my portfolio.</p>
         <center>Now Playing:</center>
         
-        <center>
-          <iframe class="z-depth-2" width="260" height="135" src="https://www.youtube.com/embed/xWbdXHnx7w8?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;start=72&amp;iv_load_policy=3&amp;vq=hd720" frameborder="0" allowfullscreen="true"></iframe></center>
+      <center>
+       <video class="responsive-video" style="width:75%" controls  poster="https://nyobetabeat.files.wordpress.com/2014/06/screen-shot-2014-06-02-at-10-49-33-am.png">
+    <source src="https://s3-us-west-1.amazonaws.com/thezoo/Silicon+Valley+Trailer+_+Drama+Recut+(1).mp4" type="video/mp4">
+  </video>
+        
+      </center>
 
 
 
 
-        <p>
-        <br>
+        <p style="font-size:90%">
+
         I decided to use some free time to build out the website you are looking at now.  It's using <b>Materialize</b> on the front-end, <b>Ruby on Rails</b> on the back-end, and <b>Heroku</b> for hosting. I wanted a website that was sleek and simple so I went with something pretty design heavy. It includes all important information about me while showing off a few skills in web development.  I also included a link to my Resume in a professional PDF format. Let me know if you need anything else. Thanks!
          </p>
 
