--- a/app/views/shared/_todo.html.erb
+++ b/app/views/shared/_todo.html.erb
@@ -1,14 +1,14 @@
-         <blockquote>
+         <blockquote style="font-size: 75%">
 
           <b>Site To Do:</b><br>
           <strike>Fix <a href="http://i.imgur.com/7IaCWt5.png" target="_blank" style="color:teal"> Mobile View </a> of Parallax(s) and Profile Photo.</strike>&nbsp;Fixed: 6-19-15. Thanks <a href="http://twitter.com/dponrails" style="color:teal">David!</a><br>
           Move from Heroku to Digital Ocean <br>
           Create Capistrano script to deploy to Digital Ocean <br>
-          Covert from Ruby on Railse to Express with Node.js <br>
+          Covert from Ruby on Rails to Express with Node.js <br>
           Add Personal Entreprenurial Projects Section<br>
-          Convert Youtube to self hosted with  <a href="http://www.videojs.com/" style="color:teal">VideoJS.</a> <br>
+          <strike>Convert Youtube to self hosted with  <a href="http://www.videojs.com/" style="color:teal">VideoJS.</a></strike> &nbsp; Fixed 6-21-15. <br>
           Add Visitor Tracking with <a href="https://ankane.github.io/ahoy/" style="color:teal"> Ahoy </a> or <a href ="https://coderwall.com/p/qbgnjg/track-page-views-the-smart-way-with-the-impressionist-gem" style="color:teal"> Impressionist.</a><br>
           Possibly move from from Materialize to <a href="http://semantic-ui.com/" style="color: teal"> Semantic-Ui.</a> <br>
-          Covert this About me collapsible to a Pop out Module with fixed content.
+          <strike>Covert this About me collapsible to a Pop out Module with fixed footer.</strike> &nbsp; Fixed 6-20-15.
         </blockquote>
-          <center><u>Last Updated    6.19.15</u><br></center>
+          <center><u>Last Updated    6.21.15</u><br></center>
