--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -110,7 +110,7 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-action-description black-text"></i></h3>
-            <a class="btn tooltipped" data-position="right" data-delay="50" data-tooltip="Download" href="resume.pdf">Resume</a>
+            <a class="btn tooltipped" data-position="right" data-delay="50" data-tooltip="Download"style="font-size:75%" href="resume.pdf">Resume</a>
 
           <p color = "black"> Press here to view my Resume in a beautiful PDF format. </p>
         </div>
