--- a/app/views/shared/_projects.html.erb
+++ b/app/views/shared/_projects.html.erb
@@ -7,7 +7,7 @@
             <h5 class="center">Mobile Manager</h5> 
         
         <!-- Modal Trigger -->
-          <center><a class="waves-effect waves-light btn modal-trigger" href="#modal1">Learn More</a></center>
+          <center><a class="waves-effect waves-light btn modal-trigger" style="font-size:75%" href="#modal1">Learn More</a></center>
 
         <!-- Modal Structure -->
         <div id="modal1" class="modal">
@@ -33,7 +33,7 @@
             <h5 class="center">Rocket Webfilter</h5>
 
         <!-- Modal Trigger -->
-          <center><a class="waves-effect waves-light btn modal-trigger" href="#modal3">Learn More</a></center>
+          <center><a class="waves-effect waves-light btn modal-trigger" style="font-size:75%" href="#modal3">Learn More</a></center>
 
         <!-- Modal Structure -->
         <div id="modal3" class="modal">
@@ -60,7 +60,7 @@
             <h5 class="center">My Big Campus</h5>
 
         <!-- Modal Trigger -->
-          <center><a class="waves-effect waves-light btn modal-trigger" href="#modal2">Learn More</a></center>
+          <center><a class="waves-effect waves-light btn modal-trigger" style="font-size:75%" href="#modal2">Learn More</a></center>
 
         <!-- Modal Structure -->
         <div id="modal2" class="modal">
