--- a/app/views/shared/_aboutme.html.erb
+++ b/app/views/shared/_aboutme.html.erb
@@ -29,7 +29,7 @@
 
 
   <!-- Modal Trigger -->
-  <div style="padding-top: 10px"><center><a class="modal-trigger waves-effect waves-light btn" href="#modal5">Press Here To Read About Me</a></center></div>
+  <div style="padding-top: 10px"><center><a class="modal-trigger waves-effect waves-light btn" style='font-size:80%'href="#modal5">Press Here To Read About Me</a></center></div>
 
   <!-- Modal Structure -->
   <div id="modal5" class="modal modal-fixed-footer">
@@ -38,7 +38,7 @@
         <center>Now Playing:</center>
         
       <center>
-       <video class="responsive-video" style="width:75%" controls  poster="https://nyobetabeat.files.wordpress.com/2014/06/screen-shot-2014-06-02-at-10-49-33-am.png">
+       <video class="responsive-video" style="width:85%" controls  poster="https://nyobetabeat.files.wordpress.com/2014/06/screen-shot-2014-06-02-at-10-49-33-am.png">
     <source src="https://s3-us-west-1.amazonaws.com/thezoo/Silicon+Valley+Trailer+_+Drama+Recut+(1).mp4" type="video/mp4">
   </video>
         
@@ -49,7 +49,7 @@
 
         <p style="font-size:90%">
 
-        I decided to use some free time to build out the website you are looking at now.  It's using <b>Materialize</b> on the front-end, <b>Ruby on Rails</b> on the back-end, and <b>Heroku</b> for hosting. I wanted a website that was sleek and simple so I went with something pretty design heavy. It includes all important information about me while showing off a few skills in web development.  I also included a link to my Resume in a professional PDF format. Let me know if you need anything else. Thanks!
+        I decided to use some free time to build out the website you are looking at now.  It's using <b>Materialize</b> on the front-end, <b>Ruby on Rails</b> on the back-end, and <b>Heroku</b> for hosting. It includes all important information about me while showing off a few skills in Development. I also included a link to my Resume in a professional PDF format.  Let me know if you need anything else. Thanks! 
          </p>
 
          <%=render "shared/todo"%>
