--- a/app/views/shared/_aboutme.html.erb
+++ b/app/views/shared/_aboutme.html.erb
@@ -49,7 +49,7 @@
 
         <p style="font-size:90%">
 
-        I decided to use some free time to build out the website you are looking at now.  It's using <b>Materialize</b> on the front-end, <b>Ruby on Rails</b> on the back-end, and <b>Heroku</b> for hosting. It includes all important information about me while showing off a few skills in Development. I also included a link to my Resume in a professional PDF format.  Let me know if you need anything else. Thanks! 
+        Welcome! I decided to use some free time to build out the website you are looking at now.  It's using <b>Materialize</b> on the front-end, <b>Ruby on Rails</b> on the back-end, and <b>Heroku</b> for hosting. It includes all important information about me while showing off a few skills in Development. I also included a link to my Resume in a professional PDF format.  Let me know if you need anything else. Thanks! 
          </p>
 
          <%=render "shared/todo"%>
