--- a/app/views/shared/_todo.html.erb
+++ b/app/views/shared/_todo.html.erb
@@ -12,7 +12,8 @@ Add <i>Personal Projects </i> Section<br>
 
 Add Visitor Tracking with <a href="https://ankane.github.io/ahoy/" style="color:teal"> Ahoy </a> or <a href ="https://coderwall.com/p/qbgnjg/track-page-views-the-smart-way-with-the-impressionist-gem" style="color:teal"> Impressionist.</a><br>
 Possibly move from from Materialize to <a href="http://semantic-ui.com/" style="color: teal"> Semantic-Ui.</a><br>
-Fix Video Fullscreen issue. 
+Fix Video Fullscreen issue. <br>
+Remove all code clutter.
 </blockquote>
 
 <center><u>Last Updated    6.21.15</u><br></center>
